--- a/bulma.custom.css
+++ b/bulma.custom.css
@@ -1794,8 +1794,8 @@ a.navbar-item,
     flex-grow: 1;
     flex-shrink: 1; }
   .navbar-item.is-tab {
-    border-bottom: 5px solid #F4D9B4;
-    min-height: 2.25rem;
+    border-bottom: 1px solid transparent;
+    min-height: 3.25rem;
     padding-bottom: calc(0.5rem - 1px); }
     .navbar-item.is-tab:focus, .navbar-item.is-tab:hover {
       background-color: transparent;
