--- a/deploy/roles/frontend/templates/nginx.conf.j2
+++ b/deploy/roles/frontend/templates/nginx.conf.j2
@@ -13,4 +13,33 @@ server {
         try_files $uri /index.html =404;
         root {{ frontend_static_path }};
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/fresquedelabiodiversite.tlscp.fr/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/fresquedelabiodiversite.tlscp.fr/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+
+server {
+    listen 80;
+
+    if ($host = www.fresquedelabiodiversite.org) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = fresquedelabiodiversite.org) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = fresquedelabiodiversite.tlscp.fr) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    server_name fresquedelabiodiversite.tlscp.fr fresquedelabiodiversite.org www.fresquedelabiodiversite.org;
+    return 404; # managed by Certbot
+
 }
