--- a/deploy/roles/frontend/templates/nginx.conf.j2
+++ b/deploy/roles/frontend/templates/nginx.conf.j2
@@ -12,8 +12,8 @@ server {
     }
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/fresquedelabiodiversite.tlscp.fr/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/fresquedelabiodiversite.tlscp.fr/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/fresquedelabiodiversite.org/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/fresquedelabiodiversite.org/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
